@@ -1,3 +1,7 @@
+2006-05-08	Benedikt Meurer <benny@xfce.org>
+
+	* exo/exo-wrap-table.c(exo_wrap_table_layout): Fix typo.
+
 2006-05-07	Benedikt Meurer <benny@xfce.org>
 
 	* exo-desktop-item-edit/main.c: Add hidden command line switch --xid
